# z-checker-installer

./: .travis.yml  COPYRIGHT.txt  README  README.md  clean.sh  createNewZCCase.sh  createNewZCCase_pwr.sh  createZCCase.sh  errBounds.cfg  errBounds_pwr.cfg  generateWebReport.py  generateWebReport.sh  libpressio_install.sh  libpressio_update.sh  manageCompressor  manageCompressor-SZauto.cfg  manageCompressor-bg.cfg  manageCompressor-dr.cfg  manageCompressor-fpzip-fd.cfg  manageCompressor-mc.cfg  manageCompressor-mgard.cfg  manageCompressor-sz-auto.cfg  manageCompressor-sz-d.cfg  manageCompressor-sz-f.cfg  manageCompressor-sz_auto.cfg  manageCompressor-szx128.cfg  manageCompressor-szx64.cfg  manageCompressor-zfp.cfg  manageCompressor.cfg  removeZCCase.sh  resetZCCase.sh  runZCCase.sh  varInfo.txt  z-checker-install.sh  z-checker-install2.sh  z-checker-pull-reset.sh  z-checker-update.sh  z-checker-web-install.sh
ADIOS2Reader/: Makefile  README.txt  testAdios2  testAdios2.cpp  varInfo.txt
HDF5Reader/: Makefile.linux2  README.txt  installHDF5Reader.sh  runZCCase_hdf5.sh
SZauto-patches/: Makefile-SZauto  SZauto_CompDecomp.sh
SZx-patches/: Makefile.bk.b128  Makefile.bk.b64  test_CompDecomp.sh  testfloat_CompDecomp.c.b128  testfloat_CompDecomp.c.b64
bg-patches/: Makefile-bg  bg_CompDecomp.sh  bgdouble_CompDecomp.cpp  bgfloat_CompDecomp.cpp
dr-patches/: Makefile-dr  dr_CompDecomp.sh  drdouble_CompDecomp.cpp  drfloat_CompDecomp.cpp
fpzip-patches/: Makefile-zc  fpzip_CompDecomp.sh  (+2 more)
sz-auto-patches/: CMakeLists.txt  Makefile-sz-auto  sz-auto_CompDecomp.sh
(+105 files in other folders)
